# youtube-watchtime

./: .gitignore
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/apis/: entities.rs  health.rs  mod.rs
server/src/apis/playlist_details/: mod.rs  playlist.rs  playlist_items.rs  videos.rs
server/src/entities/: common.rs  mod.rs  playlist.rs  playlist_items.rs  response.rs  videos.rs
server/src/fallback/: method_not_allowed.rs  mod.rs  not_found.rs
server/src/utils/: error.rs  mod.rs
web/: .gitignore  .prettierrc  eslint.config.js  index.html  package.json
web/src/: app.tsx  main.tsx
web/src/components/: index.ts  playlist-details.tsx  videos.tsx
web/src/lib/: duration-sum.ts  index.ts  to-human-readable.ts
web/src/styles/: globals.css
web/src/types/: index.ts
